fix for android source bug breaking loadImage