@@ -35,7 +35,6 @@ import android.graphics.*;
 import java.io.*;
 import java.lang.reflect.*;
 import java.net.MalformedURLException;
-import java.net.URL;
 import java.text.NumberFormat;
 import java.util.*;
 import java.util.regex.*;
@@ -50,11 +49,17 @@ import android.opengl.GLSurfaceView;
 import android.view.WindowManager;
 import android.os.Bundle;
 import android.os.Handler;
-//import android.os.Looper;
 import android.view.*;
-//import android.view.ViewGroup.LayoutParams;
 import android.widget.LinearLayout;
 import android.widget.RelativeLayout;
+
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.impl.client.DefaultHttpClient;
+import org.apache.http.HttpResponse;
+import org.apache.http.HttpEntity;
+import org.apache.http.entity.BufferedHttpEntity;
+import java.net.URI;
 
 
 public class PApplet extends Activity implements PConstants, Runnable {
@@ -3984,9 +3989,19 @@ public class PApplet extends Activity implements PConstants, Runnable {
     // access logs from being spammed with GET /sketchfolder/http://blahblah
     if (filename.indexOf(":") != -1) {  // at least smells like URL
       try {
-        URL url = new URL(filename);
-        stream = url.openStream();
-        return stream;
+        // Workaround for Android bug 6066
+        // http://code.google.com/p/android/issues/detail?id=6066
+        // http://code.google.com/p/processing/issues/detail?id=629
+//      URL url = new URL(filename);
+//      stream = url.openStream();
+//      return stream;
+        HttpGet httpRequest = null;
+        httpRequest = new HttpGet(URI.create(filename));
+        HttpClient httpclient = new DefaultHttpClient();
+        HttpResponse response = (HttpResponse) httpclient.execute(httpRequest);
+        HttpEntity entity = response.getEntity();
+        BufferedHttpEntity bufHttpEntity = new BufferedHttpEntity(entity); 
+        return bufHttpEntity.getContent();
 
       } catch (MalformedURLException mfue) {
         // not a url, that's fine
